# Tornado.Ai

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  tsconfig.base.json  tsconfig.build.json  tsconfig.json
data/checklists/: owasp_mobile_top10.csv  owasp_web_top10.csv
docker/kali/: Dockerfile  docker-compose.yml  start-kali.sh
docs/: AI-CLIENTS.md  API.md  ARCHITECTURE.md  CHECKLISTS.md  DEPLOYMENT.md  INSTALLATION.md  MCP.md  TOOLS.md  mcp-config.example.yaml
scripts/: setup.mjs  verify-pnpm-version.mjs
src/: server.ts
src/checklists/: index.ts
src/config/: index.ts
src/mcp/: index.ts
src/reports/: index.ts
src/shared/: types.ts
src/tools/: catalog.ts  definitions.ts
tests/: cache.test.ts  control-center.test.ts  mcp-registry.test.ts  rbac.test.ts  test_aide.py  test_cache.py  test_command.py  test_control_center.py  test_mcp_registry.py  test_process_manager.py  test_rbac.py  test_runtime.py  test_tools_catalog.py  tools-catalog.test.ts
tornado_ai/: __init__.py  server.py
tornado_ai/checklists/: loader.py
tornado_ai/config/: __init__.py
tornado_ai/mcp/: registry.py
tornado_ai/shared/: types.py
tornado_ai/tools/: adapters.py  catalog.py  definitions.py  registry.py  runtime.py
tornado_ai/ui/: __init__.py
ui/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
ui/sim/: adapters.js  cache.js  decision.js  policy.js
ui/src/: App.tsx  index.css
ui/tests/: adapters.spec.ts  cache.spec.ts  (+2 more)
(+59 files in other folders)
